--- a/index.html
+++ b/index.html
@@ -2,9 +2,45 @@
 <html>
   <head>
     <title>Calculator</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
     <h1>Calculator</h1>
-    <script src="js/scripts.js"></script>
+    <div id="display"></div>
+    <table>
+      <tr>
+        <td>C</td>
+        <td>()</td>
+        <td>%</td>
+        <td>/</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>8</td>
+        <td>9</td>
+        <td>*</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>5</td>
+        <td>6</td>
+        <td>-</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+        <td>+</td>
+      </tr>
+      <tr>
+        <td>+/-</td>
+        <td>0</td>
+        <td>.</td>
+        <td>=</td>
+      </tr>
+    </table>
+
   </body>
 </html>
