--- a/index.html
+++ b/index.html
@@ -2,45 +2,28 @@
 <html>
   <head>
     <title>Calculator</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.ßcss" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
   </head>
   <body>
-    <h1>Calculator</h1>
-    <div id="display"></div>
-    <table>
-      <tr>
-        <td>C</td>
-        <td>()</td>
-        <td>%</td>
-        <td>/</td>
-      </tr>
-      <tr>
-        <td>7</td>
-        <td>8</td>
-        <td>9</td>
-        <td>*</td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-        <td>-</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>+</td>
-      </tr>
-      <tr>
-        <td>+/-</td>
-        <td>0</td>
-        <td>.</td>
-        <td>=</td>
-      </tr>
-    </table>
-
+    <div class="container">
+      <h1>Calculator</h1>
+      <form id="add">
+        <div class="form-group">
+          <label for="add1">1st number:</label>
+          <input id="add1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="add2">2nd number:</label>
+          <input id="add2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Add!</button>
+          <button type="submit" class="btn">Subtract!</button>
+      </form>
+      <div id="output">
+      </div>
+    </div>
   </body>
 </html>
