--- a/index.html
+++ b/index.html
@@ -20,9 +20,33 @@
           <input id="add2" class="form-control" type="text">
         </div>
         <button type="submit" class="btn">Add!</button>
-          <button type="submit" class="btn">Subtract!</button>
       </form>
-      <div id="output">
+      <div id="outputadd">
+
+        <form id="subtract">
+          <div class="form-group">
+            <label for="sub1">1st number:</label>
+            <input id="sub1" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="sub2">2nd number:</label>
+            <input id="sub2" class="form-control" type="text">
+          </div>
+          <button type="submit" class="btn">Subtract!</button>
+        </form>
+        <div id="outputsub">
+          <form id="multiply">
+            <div class="form-group">
+              <label for="mult1">1st number:</label>
+              <input id="mult1" class="form-control" type="text">
+            </div>
+            <div class="form-group">
+              <label for="mult2">2nd number:</label>
+              <input id="mult2" class="form-control" type="text">
+            </div>
+            <button type="submit" class="btn">Multiply!</button>
+          </form>
+          <div id="outputmult">
       </div>
     </div>
   </body>
